--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^4.9.1",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
