--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.21.1",
@@ -17,15 +18,19 @@
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.29.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-paper": "^4.9.1",
+    "react-native-daterange-picker": "^1.5.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.3",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.18.1",
+    "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.11.7",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
