--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-daterange-picker": "^1.5.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-input-spinner": "^1.7.11",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
